--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -70,6 +70,19 @@
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="30dp"/>
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/more"
+            android:src="@drawable/ic_baseline_more_vert_24"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
