--- a/app/src/main/res/menu/menu_button.xml
+++ b/app/src/main/res/menu/menu_button.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_button"
+        android:id="@+id/menu_delete"
         android:title="DELETE"/>
+
+    <item
+        android:id="@+id/menu_edit"
+        android:title="EDIT"/>
 </menu>
