--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -22,6 +22,7 @@
             android:textSize="20sp"
             android:text="タイトル変更"
             android:id="@+id/title"
+            android:textColor="#000000"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="10dp"
@@ -30,6 +31,7 @@
 
         <TextView
             android:id="@+id/exTitle"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="26sp"
@@ -40,7 +42,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            tools:text="EXTITLE"/>
+            tools:text="EX_TITLE"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/title_input"
@@ -58,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="#000000"
             android:text="〆切日時変更"
             android:id="@+id/dead_line"
             app:layout_constraintTop_toBottomOf="@id/title_input"
@@ -66,30 +69,29 @@
             android:layout_marginTop="35dp"
             android:layout_marginStart="10dp" />
 
-        <TextView
-            android:id="@+id/exDeadLine"
+        <Button
+            android:id="@+id/date_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dead_line"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-            tools:text="EXDEADLINE"/>
+            android:layout_height="56dp"
+            android:text="入力"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintStart_toEndOf="@id/dead_line"
+            app:layout_constraintTop_toBottomOf="@id/title_input"
+            />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/dead_line_input"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/date_display"
+            android:layout_width="wrap_content"
+            android:textColor="#000000"
             android:layout_height="wrap_content"
-            android:hint="新しい〆切日時を入力"
-            android:text="@={viewModel.reDeadTime}"
-            app:layout_constraintTop_toBottomOf="@+id/exDeadLine"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginEnd="10dp"/>
+            app:layout_constraintStart_toEndOf="@id/date_button"
+            app:layout_constraintBottom_toBottomOf="@id/dead_line"
+            android:textSize="18sp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            tools:text="2020/11/01"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -97,9 +99,10 @@
             android:textSize="20sp"
             android:text="備考変更"
             android:id="@+id/memo"
-            app:layout_constraintTop_toBottomOf="@id/dead_line_input"
+            app:layout_constraintTop_toBottomOf="@id/dead_line"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="10dp"
+            android:textColor="#000000"
             android:layout_marginTop="35dp"
             android:layout_marginStart="10dp" />
 
@@ -113,9 +116,10 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="7dp"
+            android:textColor="#000000"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            tools:text="EXMEMO"/>
+            tools:text="EX_MEMO"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/memo_input"
@@ -124,6 +128,7 @@
             android:hint="新しい備考を入力（任意）"
             android:text="@={viewModel.reMemo}"
             app:layout_constraintTop_toBottomOf="@+id/exMemo"
+            android:textSize="20sp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="10dp"/>
