--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,113 +5,144 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="20dp"
-    android:background="@drawable/flame_style"
-    android:paddingTop="3dp"
-    tools:context=".MainActivity">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/flame_style"
+        android:paddingBottom="20dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginLeft="2dp"
+        tools:context=".MainActivity">
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#ffcc99"
+            android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginEnd="3dp"
+            app:layout_constraintBottom_toBottomOf="@id/title"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/title"
-            android:background="@drawable/title_frame_style"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="4dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:paddingBottom="4dp"
+            android:layout_marginTop="4dp"
             android:paddingStart="4dp"
             android:paddingLeft="4dp"
             android:paddingEnd="4dp"
             android:paddingRight="4dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
-            tools:text="TITLE"/>
+            android:paddingBottom="4dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textSize="26sp"
+            app:layout_constraintEnd_toStartOf="@+id/finished"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="TITLE" />
 
         <TextView
+            android:id="@+id/finished"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/finished"
-            app:layout_constraintEnd_toStartOf="@id/more"
-            android:text="FINISHED"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="12dp"
-            android:textColor="@color/color_selector"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            android:id="@+id/dead_line"
-            android:layout_marginLeft="12dp"
-            android:layout_marginStart="12dp"
-            tools:text="〆切 : 00:00:00"
-            android:layout_marginRight="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/created_time"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dead_line"
-            android:layout_marginRight="12dp"
-            android:layout_marginEnd="12dp"
-            tools:text="作成日時 : 00:00:00"/>
+            android:layout_marginRight="8dp"
+            android:text="FINISHED"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/color_selector"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@id/more"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/dead_display"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/memoDisplay"
-            android:text="備考："
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/created_time"
+            android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="4dp"
-            android:layout_marginStart="12dp"
+            android:text="〆切："
             android:textColor="@color/color_selector"
-            />
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/dead_line"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@id/dead_display"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:text="2020/00/00/ 00:00" />
+
+        <TextView
+            android:id="@+id/created_time"
+            android:textColor="#000000"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginLeft="32dp"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/more"
+            tools:text="作成日時 : 00:00:00" />
+
+        <TextView
+            android:id="@+id/memoDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="20dp"
+            android:text="備考："
+            android:textColor="@color/color_selector"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dead_display"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/memo"
-            android:textSize="18sp"
+            android:textColor="#000000"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/memoDisplay"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/created_time"
-            tools:text="this is memo.this is memo.this is memo.this is memo.this is memo."
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/memoDisplay"
+            app:layout_constraintTop_toBottomOf="@id/dead_line"
+            tools:text="this is memo.this is memo.this is memo.this is memo.this is memo." />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/more"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/more"
-            android:src="@drawable/ic_baseline_more_vert_24"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
             android:clickable="true"
             android:focusable="true"
+            android:src="@drawable/ic_baseline_more_vert_24"
+            android:tint="#000000"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
