--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -2,6 +2,7 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -61,7 +62,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#000000"
-            android:text="〆切日時変更"
+            android:text="〆切変更"
             android:id="@+id/dead_line"
             app:layout_constraintTop_toBottomOf="@id/title_input"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,8 +90,7 @@
             app:layout_constraintStart_toEndOf="@id/date_button"
             app:layout_constraintBottom_toBottomOf="@id/dead_line"
             android:textSize="18sp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="12dp"
             tools:text="2020/11/01"/>
 
         <TextView
@@ -132,8 +132,6 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="10dp"/>
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
