--- a/app/src/main/res/menu/menu_button.xml
+++ b/app/src/main/res/menu/menu_button.xml
@@ -11,9 +11,6 @@
 
     <item
         android:id="@+id/menu_finished"
-        android:title="FINISHED"/>
+        android:title="FINISHED / REDO"/>
 
-    <item
-        android:id="@+id/menu_reDo"
-        android:title="REDO"/>
 </menu>
